--- a/NanoPi_R2S.config
+++ b/NanoPi_R2S.config
@@ -230,4 +230,6 @@ CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_wireless-regdb=y
+CONFIG_PACKAGE_luci-app-aria2=y
+CONFIG_PACKAGE_ariang=y
 CONFIG_PACKAGE_luci-app-transmission=y
