--- a/Nanopi_R4S.config
+++ b/Nanopi_R4S.config
@@ -261,3 +261,6 @@ CONFIG_boost-variant-release=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_dns2socks=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=y
+
+CONFIG_PACKAGE_luci-app-aria2=y
+CONFIG_PACKAGE_ariang=y
