--- a/NanoPi_R2S.config
+++ b/NanoPi_R2S.config
@@ -233,3 +233,6 @@ CONFIG_PACKAGE_wireless-regdb=y
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_ariang=y
 CONFIG_PACKAGE_luci-app-transmission=y
+
+CONFIG_PACKAGE_autosamba=y
+CONFIG_PACKAGE_luci-app-samba=y
